# ruban_rose

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-EDA.ipynb  02-Resnet50.ipynb  Untitled.ipynb  graphiques.ipynb
results/: optuna.db  optunarf.db
scripts/: getImagesSizes.py  resnet50_retrain.py
scripts/optuna/: random_forest.py  resnet50.py  resnet50_1.py  resnet50_2.py  resnet50_3.py  resnet50_4.py
src/pinkribbon/: __init__.py  callbacks.py  dataset.py  images.py  metrics.py  models.py  plots.py
